--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1></h1>
+    <div class="header">
+      <ul class="left-links">
+        <li><a href="#">Header Logo</a></li>
+      </ul>
+      <ul class="right-links">
+        <li><a href="#">Header Link One</a></li>
+        <li><a href="#">Header Link Two</a></li>
+        <li><a href="#">Header Link Three</a></li>
+      </ul>
+    </div>
   </body>
 </html>
