--- a/index.html
+++ b/index.html
@@ -16,5 +16,18 @@
         <li><a href="#">Header Link Three</a></li>
       </ul>
     </div>
+    <div class="hero">
+      <div class="hero-left">
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes under the main title.
+          It's a smaller font and the color is lower constrast
+        </p>
+        <button>Sign up</button>
+      </div>
+      <div class="hero-img">
+        <p>This is a placeholder for an image</p>
+      </div>
+    </div>
   </body>
 </html>
