--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <li><a href="#">Header Logo</a></li>
       </ul>
       <ul class="right-links">
-        <li><a href="#">Header Link One</a></li>
-        <li><a href="#">Header Link Two</a></li>
-        <li><a href="#">Header Link Three</a></li>
+        <li><a href="#">header link one</a></li>
+        <li><a href="#">header link two</a></li>
+        <li><a href="#">header link three</a></li>
       </ul>
     </div>
     <div class="hero">
