--- a/index.html
+++ b/index.html
@@ -29,5 +29,30 @@
         <p>This is a placeholder for an image</p>
       </div>
     </div>
+    <div class="info">
+      <div class="info-title">Some random information</div>
+
+      <div class="items">
+        <div class="item">
+          <img src="./imgs/img1.jpg" alt="image1">
+          <div class="info-text">This is the first image</div>
+        </div>
+        <div class="item">
+          <img src="./imgs/img2.jpg" alt="image2">
+          <div class="info-text">This is the second image</div>
+        </div>
+        <div class="item">
+          <img src="./imgs/img3.jpg" alt="image3">
+          <div class="info-text">This is the third image</div>
+        </div>
+        <div class="item">
+          <img src="./imgs/img4.jpg" alt="image4">
+          <div class="info-text">This is the fourth image</div>
+        </div>
+
+
+      </div>
+
+    </div>
   </body>
 </html>
