--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     </div>
     <div class="info">
       <div class="info-title">Some random information</div>
-
       <div class="items">
         <div class="item">
           <img src="./imgs/img1.jpg" alt="image1">
@@ -49,10 +48,17 @@
           <img src="./imgs/img4.jpg" alt="image4">
           <div class="info-text">This is the fourth image</div>
         </div>
-
-
       </div>
-
+    </div>
+    <div class="quote">
+      <div class="quotation">
+        This is an inspiring quote, or a testimonial from a customer.
+        Maybe it's just filling up space, or maybe people will actually
+        read it. Who knows? All I know is that it looks nice
+      </div>
+      <div class="quoted">
+        - Thor, God of Thunder
+      </div>
     </div>
   </body>
 </html>
