--- a/index.html
+++ b/index.html
@@ -60,5 +60,12 @@
         - Thor, God of Thunder
       </div>
     </div>
+    <div class="call">
+      <div class="call-text">
+        <h1>Call to action! It's time!</h1>
+        <p>Sign up for our product by clicking that button right over there!</p>
+      </div>
+      <button>Sign up</button>
+    </div>
   </body>
 </html>
