ah - Finish footer section

--- a/index.html
+++ b/index.html
@@ -67,5 +67,8 @@
       </div>
       <button>Sign up</button>
     </div>
+    <div class="footer">
+      Copyright @ AHuangHe 2023
+    </div>
   </body>
 </html>
